--- a/docker/docker-compose.postgres.yml
+++ b/docker/docker-compose.postgres.yml
@@ -2,6 +2,7 @@ services:
   postgres:
     image: postgres:15
     container_name: pg_capstone3
+    restart: always 
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
