--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -29,10 +29,10 @@ services:
       "
     environment:
       AIRFLOW__CORE__LOAD_EXAMPLES: "False"
-      # koneksi ke postgres (service name di compose)
+      # koneksi ke postgres
       PG_DSN: "host=postgres user=postgres password=postgres dbname=library port=5432"
       PYTHONPATH: "/opt/airflow/app"
-      # untuk BigQuery (isi nanti file kunci)
+      # untuk BigQuery 
       GOOGLE_APPLICATION_CREDENTIALS: "/keys/jcdeah-006-b18fd9371986.json"
       BQ_PROJECT: "jcdeah-006"
       BQ_DATASET: "fauzan_perpustakaan_capstone3"
